; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_tlb_hash32.c_tlb_flush.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/mm/extr_tlb_hash32.c_tlb_flush.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mmu_gather = type { i32 }

@Hash = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @tlb_flush(%struct.mmu_gather* %0) #0 {
  %2 = alloca %struct.mmu_gather*, align 8
  store %struct.mmu_gather* %0, %struct.mmu_gather** %2, align 8
  %3 = load i64, i64* @Hash, align 8
  %4 = icmp eq i64 %3, 0
  br i1 %4, label %5, label %7

5:                                                ; preds = %1
  %6 = call i32 (...) @_tlbia()
  br label %7

7:                                                ; preds = %5, %1
  %8 = call i32 (...) @pte_free_finish()
  ret void
}

declare dso_local i32 @_tlbia(...) #1

declare dso_local i32 @pte_free_finish(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
